--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -115,25 +115,31 @@
   
 #### Task 1: Use Visual Studio to deploy the Linux app server's virtual machines
   
-1. On MIA-CL1, on the taskbar, click the  **Visual Studio** icon.
+1. On MIA-CL1, in the Windows PowerShell ISE window, type in the following and press Enter (replace [Azure_region] with the name of the Azure region that you selected when running the Setup-Azure script at the beginning of this module):
 
-2. In Visual Studio, click  **File**, click  **Open**, click  **Project/Solution**, and then browse to  **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy**.
+  ```   foreach ($sku in (Get-AzureRmVMImageSku -Location "[Azure_region]" -PublisherName "Canonical" -Offer "UbuntuServer")) {if ((Get-AzureRmVMImage -Location "[Azure_region]" -PublisherName "Canonical" -Offer "UbuntuServer" -Skus $sku.Skus -ErrorAction SilentlyContinue).Count -gt 0) {Write-Host $($sku).Skus}}
+  ```
+2. In the output displayed in the Windows PowerShell ISE window, note the list of the Ubuntu images avaialble in the Azure region you selected.
 
-3. In the Open Project window, click  **ResDevLinuxDeploy.sln**, and then click  **Open**.
+3. On MIA-CL1, on the taskbar, click the  **Visual Studio** icon.
 
-4. In Visual Studio, in the Solution Explorer pane, expand  **Templates**, and then click  **azuredeploy.json**.
+4. In Visual Studio, click  **File**, click  **Open**, click  **Project/Solution**, and then browse to  **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy**.
 
-5. View the parameters and variables section of the template.
+5. In the Open Project window, click  **ResDevLinuxDeploy.sln**, and then click  **Open**.
 
-6. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **New Deployment**.
+6. In Visual Studio, in the Solution Explorer pane, expand  **Templates**, and then click  **azuredeploy.json**.
 
-7. If necessary, in the Deploy to Resource Group window, click  **Add an account**. In the Sign in to your account window, sign in with an account that is either the Service Administrator or Co-administrator of your Azure subscription.
+7. View the parameters and variables section of the template.
 
-8. In the Deploy to Resource Group window, click the  **Resource Group** drop-down box, and then click **ResDevRG**.
+8. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **New Deployment**.
 
-9. In the Deploy to Resource Group window, click  **Edit Parameters**.
+9. If necessary, in the Deploy to Resource Group window, click  **Add an account**. In the Sign in to your account window, sign in with an account that is either the Service Administrator or Co-administrator of your Azure subscription.
 
-10. In the Edit Parameters window, populate the parameter values according to details in the following list:
+10. In the Deploy to Resource Group window, click the  **Resource Group** drop-down box, and then click **ResDevRG**.
+
+11. In the Deploy to Resource Group window, click  **Edit Parameters**.
+
+12. In the Edit Parameters window, populate the parameter values according to details in the following list:
 
 
   -  **vmName:** ResDevApp1
