--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -131,17 +131,23 @@
 
 6. In Visual Studio, in the Solution Explorer pane, expand  **Templates**, and then click  **azuredeploy.json**.
 
-7. View the parameters and variables section of the template.
+7. View the parameters and variables section of the template. In the list of parameters in the JSON Outline window, click **ubuntuOSVersion**.
 
-8. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **New Deployment**.
+8. In the template, identify the values of the **defaultValue** and **allowedValues** entries of the **ubuntuOSVersion** parameter. If these values do not include one of the entries you noted in step 2, perform the following tasks:
 
-9. If necessary, in the Deploy to Resource Group window, click  **Add an account**. In the Sign in to your account window, sign in with an account that is either the Service Administrator or Co-administrator of your Azure subscription.
+  -  identify the last entry from the list you noted in step 2 and replace the **defaultValue** entry of "14.04.2-LTS" in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace **"defaultValue": "14.04.2-LTS",** with **"defaultValue": "16.04.0-LTS",**.
 
-10. In the Deploy to Resource Group window, click the  **Resource Group** drop-down box, and then click **ResDevRG**.
+  -  identify the last entry from the list you noted in step 2 and replace the **allowedValues** entry of "14.04.2-LTS" in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace the line ** "14.04.2-LTS,** under **"allowedValues": [** with **"16.04.0-LTS",**.
 
-11. In the Deploy to Resource Group window, click  **Edit Parameters**.
+9. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **New Deployment**.
 
-12. In the Edit Parameters window, populate the parameter values according to details in the following list:
+10. If necessary, in the Deploy to Resource Group window, click  **Add an account**. In the Sign in to your account window, sign in with an account that is either the Service Administrator or Co-administrator of your Azure subscription.
+
+11. In the Deploy to Resource Group window, click the  **Resource Group** drop-down box, and then click **ResDevRG**.
+
+12. In the Deploy to Resource Group window, click  **Edit Parameters**.
+
+13. In the Edit Parameters window, populate the parameter values according to details in the following list:
 
 
   -  **vmName:** ResDevApp1
