--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -135,9 +135,9 @@
 
 8. In the template, identify the values of the **defaultValue** and **allowedValues** entries of the **ubuntuOSVersion** parameter. If these values do not include one of the entries you noted in step 2, perform the following tasks:
 
-  -  identify the last entry from the list you noted in step 2 and replace the **defaultValue** entry of "14.04.2-LTS" in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace **"defaultValue": "14.04.2-LTS",** with **"defaultValue": "16.04.0-LTS",**.
+  -  identify the last entry from the list you noted in step 2 and replace the **defaultValue** entry of **"14.04.2-LTS"** in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace **"defaultValue": "14.04.2-LTS",** with **"defaultValue": "16.04.0-LTS",**.
 
-  -  identify the last entry from the list you noted in step 2 and replace the **allowedValues** entry of "14.04.2-LTS" in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace the line ** "14.04.2-LTS,** under **"allowedValues": [** with **"16.04.0-LTS",**.
+  -  identify the last entry from the list you noted in step 2 and replace the **allowedValues** entry of **"14.04.2-LTS"** in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace the line **"14.04.2-LTS",** under **"allowedValues": [** with **"16.04.0-LTS",**.
 
 9. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **New Deployment**.
 
