--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -172,13 +172,23 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Use Visual Studio to deploy the Linux app server's virtual machines
   
-1. On MIA-CL1, open the Visual Studio solution located at  **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy.**
+1. On MIA-CL1, in the Windows PowerShell ISE window, type in the following and press Enter (replace [Azure_region] with the name of the Azure region that you selected when running the Setup-Azure script at the beginning of this module):
 
-2. View the contents of the  **azuredeploy.json** template.
+  ```
+  foreach ($sku in (Get-AzureRmVMImageSku -Location "[Azure_region]" -PublisherName "Canonical" -Offer "UbuntuServer")) {if ((Get-AzureRmVMImage -Location "[Azure_region]" -PublisherName "Canonical" -Offer "UbuntuServer" -Skus $sku.Skus -ErrorAction SilentlyContinue).Count -gt 0) {Write-Host $($sku).Skus}}
+  ```
 
-3. In the Solution Explorer, right-click  **ResDevLinuxDeploy**, and then start a new deployment process for the first virtual machine.
+2. In the output displayed in the Windows PowerShell ISE window, note the list of the Ubuntu images avaialble in the Azure region you selected.
 
-4. Deploy a new virtual machine into the ResDevRG resource group, by using the following parameter values:
+3. On MIA-CL1, open the Visual Studio solution located at  **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy.**
+
+4. View the contents of the  **azuredeploy.json** template. In the list of parameters in the JSON Outline window, click **ubuntuOSVersion**.
+
+5. If necessary, update the values of **defaultValue** and **allowedValues** entries of the **ubuntuOSVersion** parameter with the values you identified in step 2.
+
+6. In the Solution Explorer, right-click  **ResDevLinuxDeploy**, and then start a new deployment process for the first virtual machine.
+
+7. Deploy a new virtual machine into the ResDevRG resource group, by using the following parameter values:
 
 
   -  **vmName:** ResDevApp1
