Typo backend pool
Typo backend pool

--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -217,7 +217,7 @@
 
   - Port:  **80**
 
-  - Backend Pool:  **ResDevWebPool**
+  - Backend Pool:  **ResDevWebLBPool**
 
   - Probe:  **ResDevWebProbe**
 
