--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -21,7 +21,7 @@
 
 2. When prompted, sign in using the Microsoft account associated with your Azure subscription.
 
-3. In the Azure portal, in the Custom deployment blade, click the  **Edit Template** link.
+3. In the Azure portal, in the **Create a Virtual Network with two Subnets** blade, click the  **Edit** button.
 
 4. Review the structure of the JavaScript Object Notation (JSON) file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters that you can edit:  _location, vnetName_,  _vnetAddressPrefix_, _ subnet1Name_, _ subnet1Prefix, subnet2Name_, _ subnet2Prefix._
 
@@ -36,35 +36,32 @@
 
 #### Task 3: Run the deployment from the Azure portal
   
-1. In the Custom deployment blade click  **Edit Parameters**.
+1. In the **Create a Virtual Network with two Subnets**, locate the Basics section.
 
-2. Type the following information for the Parameters, and then click  **OK**.
+2.	In the **Resource Group** section, locate the **Create new** radio button and select it.
 
+3. 	In the **Resource Group** section, locate the dialog box and enter **AdatumLabRG** as the name of the *Resource Group*.
 
-  - VNETNAME: **HQ**
+4. In the Custom Deployment blade under Resource group location drop-down list select  _&lt;Location1&gt;_.
 
-  - VNETADDRESSPREFIX:  **10.0.0.0/16**
-
-  - SUBNET1NAME:  **Subnet1**
-
-  - SUBNET1PREFIX:  **10.0.0.0/24**
-
-  - SUBNET2NAME: **Subnet2**
-
-  - SUBNET2PREFIX:  **10.0.1.0/24**
+5. Type the following information for the Parameters in the **Settings** section.
 
 
-1.	In the **Resource Group** section, locate the **Create new** radio button and select it.
+  - Vnet Name: **HQ**
 
-2. 	In the **Resource Group** section, locate the dialog box and enter **AdatumLabRG** as the name of the *Resource Group*.
+  - Vnet Address Prefix:  **10.0.0.0/16**
 
-3. In the Custom Deployment blade under Resource group location drop-down list select  _&lt;Location1&gt;_.
+  - Subnet1Prefix:  **10.0.0.0/24**
 
-4. In the Custom Deployment blade, click  **Legal Terms** link. Review the Terms of use, and then click **Purchase**.
+  - Subnet1Name:  **Subnet1**
+  
+  - Subnet2Prefix:  **10.0.1.0/24**
 
-5. In the custom deployment blade, click  **Create** to create the new virtual network.
+  - Subnet2Name: **Subnet2**
 
-6. Verify that provisioning of the new virtual network with name  **HQ** completed successfully.
+4. In the *Terms and Conditions** section, check **I agree to the terms and conditions stated above**. Review the Terms of use, and then click **Purchase**.
+
+5. Verify that provisioning of the new virtual network with name  **HQ** completed successfully.
 
 
 >  **Result**: After completing this exercise, you should have created virtual networks for A. Datum HQ.
