Traffic Manager profile moved
Traffic Manager profile moved from networking to Monitoring + management

--- a/Instructions/20533C_LAB_AK_05.md
+++ b/Instructions/20533C_LAB_AK_05.md
@@ -356,7 +356,7 @@ Note the name of your original web app and location.
 
 #### Task 2: Create a Traffic Manager profile
   
-1. In Internet Explorer, in the Azure portal, click  **New**, and then click  **Networking**. 
+1. In Internet Explorer, in the Azure portal, click  **New**, and then click  **Monitoring + management**. 
 
 2. In the Networking blade, click  **Traffic Manager profile**. 
 
@@ -428,7 +428,7 @@ where  _dnsname_ is the DNS name of the traffic manager profile that you accesse
 
 6. In Internet Explorer, switch to the tab that displays the Azure portal.
 
-7. In the  _Yourname_****Traffic Manager blade, click the  **All settings** link.
+7. In the  _Yourname_ **Traffic Manager blade**, click the  **All settings** link.
 
 8. In the Settings blade, click the Endpoints link.
 
@@ -442,7 +442,7 @@ where  _dnsname_ is the DNS name of the traffic manager profile that you accesse
   nslookup dnsname
   ```
 
-Please note  _dnsname_****is the DNS name that you used in step 4.
+Please note  _dnsname_ is the DNS name that you used in step 4.
 
 12. Note that the aliases that return are different from those returned in step 4.
 
