--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -60,7 +60,7 @@ The main tasks for this exercise are as follows:
 
 2. When prompted, sign in using the Microsoft account associated with your Azure subscription.
 
-3. In the Azure portal, in the Custom deployment blade, click the  **Edit Template** link.
+3. In the Azure portal, in the **Create a Virtual Network with two Subnets** blade, click the  **Edit** link.
 
 4. Review the structure of the JSON file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters that you can edit:  _vnetName_,  _vnetAddressPrefix_, _ subnet1Name_, _ subnet1Prefix, subnet2Name_, _ subnet2Prefix._
 
