--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -75,9 +75,15 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Run the deployment from the Azure portal
   
-1. In the Custom deployment blade click  **Edit Parameters**.
+1. In the **Create a Virtual Network with two Subnets** blade, locate the Basics section.
 
-2. Type the following information for the Parameters, and then click  **OK**.
+2. In the **Resource Group** section, locate the **Create new** radio button and select it.
+
+3. In the **Resource Group** section, locate the text box and enter **AdatumLabRG** as the name of the *Resource Group*.
+
+4. In the **Location** drop-down list, select  _&lt;Location1>._
+
+5. Type the following information in the **SETTINGS** section:
 
 
   - VNETNAME:  **HQ**
@@ -92,17 +98,9 @@ The main tasks for this exercise are as follows:
 
   - SUBNET2PREFIX:  **10.0.1.0/24**
 
-1.	In the **Resource Group** section, locate the **Create new** radio button and select it.
+6. In the **Terms and Conditions** section, check **I agree to the terms and conditions stated above** and then click **Purchase**.
 
-2. 	In the **Resource Group** section, locate the dialog box and enter **AdatumLabRG** as the name of the *Resource Group*.
-
-3. In the Custom Deployment blade under Resource group location drop-down list select  _&lt;Location1>._
-
-4. In the Custom Deployment blade, click  **Legal Terms** link. Review the Terms of use, and then click **Purchase**.
-
-5. In the custom deployment blade, click  **Create** to create the new virtual network.
-
-6. Verify that provisioning of the new virtual network with name  **HQ** completed successfully
+7. Verify that provisioning of the new virtual network with name  **HQ** completed successfully
 
 
 >  **Result**: After completing this exercise, you should have created virtual networks for A. Datum HQ.
