--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -36,7 +36,7 @@
 
 #### Task 3: Run the deployment from the Azure portal
   
-1. In the **Create a Virtual Network with two Subnets**, locate the Basics section.
+1. In the **Create a Virtual Network with two Subnets** blade, locate the Basics section.
 
 2.	In the **Resource Group** section, locate the **Create new** radio button and select it.
 
@@ -44,7 +44,7 @@
 
 4. In the Custom Deployment blade under Resource group location drop-down list select  _&lt;Location1&gt;_.
 
-5. Type the following information for the Parameters in the **Settings** section.
+5. Type the following information for the Parameters in the **SETTINGS** section.
 
 
   - Vnet Name: **HQ**
@@ -59,7 +59,7 @@
 
   - Subnet2Name: **Subnet2**
 
-4. In the *Terms and Conditions** section, check **I agree to the terms and conditions stated above**. Review the Terms of use, and then click **Purchase**.
+4. In the **Terms and Conditions** section, check **I agree to the terms and conditions stated above**. Review the Terms of use, and then click **Purchase**.
 
 5. Verify that provisioning of the new virtual network with name  **HQ** completed successfully.
 
