--- a/Instructions/20533C_LAB_AK_01.md
+++ b/Instructions/20533C_LAB_AK_01.md
@@ -45,7 +45,7 @@
 
 5. On the  **Dashboard** page, at the top of the screen, click **Done customizing**.
 
-6. On the  **Dashboard** page, on the Hub menu, click **Browse**, and then click the star beside  **Storage accounts**. 
+6. On the  **Dashboard** page, on the Hub menu, click **More services**, and then click the star beside  **Storage accounts**. 
 
 
 
@@ -106,7 +106,7 @@
 
 #### Task 2: Create Azure resources
   
-1. On the Azure portal page, click  **New**, click  **Data + Storage**, and then click  **Storage account**.
+1. On the Azure portal page, click  **New**, click  **Storage**, and then click  **Storage account**.
 
 2. On the Create storage account blade, in the  **Name** box, type a unique name for the storage account you are creating. You can use the current date and your initials to create a unique value in the format **storage**_MMDDYYYYab._
 >  **Note:** For example, a student named Ed Meadows might use **storage04252016em**.
@@ -121,7 +121,7 @@
   
 1. In the Azure portal, on the Hub menu, click  **Resource groups**.
 
-2. On the Resource groups blade, click  **TestRG1**, and then in the Settings blade for TestRG1, click  **Tags.**
+2. On the Resource groups blade, click  **TestRG1**, and then in the TestRG1 blade, click  **Tags.**
 
 3. On the Tags blade, in the  **Key** box, type **project**, and then in the  **Value** box, type **Test.** Click **Save**.
 
@@ -143,7 +143,7 @@
 
 2. On the  **Hub** menu, click **Resource groups**, and then click  **TestRG1**.
 
-3. On the Settings blade for TestRG1, click  **Access control (IAM)**.
+3. On the TestRG1 blade, click  **Access control (IAM)**.
 
 4. On the Users blade, click  **Roles**, and then on the Roles pane, click  **Storage Account Contributor**.
 
