--- a/Instructions/20533C_LAB_01.md
+++ b/Instructions/20533C_LAB_01.md
@@ -80,7 +80,7 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 5. Click  **Done customizing** to confirm the changes to the **Dashboard** page.
 
-6. On the Hub menu, use the  **Browse** menu to pin the **Storage accounts** item to the Hub menu.
+6. On the Hub menu, use the  **More services** menu to pin the **Storage accounts** item to the Hub menu.
 
 
 
