--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -33,11 +33,11 @@
 
 1. Click  **Create**. Wait for deployment to complete. This should take only a few seconds.
 
-2. On the  **Startboard** of the Azure portal, click **+New** on the **Hub** menu.
+2. On the  **Dashboard** of the Azure portal, click **+New** on the **Hub** menu.
 
-3. In the  **New** blade, click **Virtual Machines**.
+3. In the  **New** blade, click **Compute**.
 
-4. In the  **Virtual Machines** blade, click **Windows Server 2012 R2 Datacenter**.
+4. In the  **Compute** blade, click **Windows Server 2012 R2 Datacenter**.
 
 5. In the  **Windows Server 2012 R2 Datacenter** blade, ensure that **Resource Manager** appears in the **Select a deployment model** drop-down list, and then click **Create**. The  **Create virtual machine** blade appears and expands its **Basics** blade.
 
@@ -84,7 +84,7 @@
 
 2. In the  **Summary** blade, click **OK**.
 
-3. On the  **Startboard** of the Azure portal, click **+New** on the **Hub** menu.
+3. On the  **Dashboard** of the Azure portal, click **+New** on the **Hub** menu.
 
 4. In the  **New** blade, click **Virtual Machines**.
 
@@ -117,8 +117,6 @@
 3. In the  **Settings** blade, specify the following settings:
 
 
-  - Disk type:  **Standard**
-
   - Storage account:  **_Accept the default_**_._
 
   - Virtual network:  **ResDevWebAS**
@@ -138,7 +136,7 @@
 
 2. In the  **Summary** blade, click **OK**.
 
-3. On the  **Startboard** of the Azure portal, click **Browse** on the **Hub** menu.
+3. On the  **Dashboard** of the Azure portal, click **Browse** on the **Hub** menu.
 
 4. In the list of services, select  **Availability sets**. 
 
@@ -159,7 +157,7 @@
 
   - Name:  **ResDevWebLB**
 
-  - Scheme:  **Public**
+  - Type:  **Public**
 
   - Public IP address:  **_Create new_** dynamic address named **ResDevWebLBIP**.
 
@@ -174,9 +172,9 @@
 
 1. Click  **Create**. Wait for the deployment to complete. This should take a few seconds.
 
-2. On the  **Startboard** of the Azure portal, click **Browse**, select  **Load Balancers** from the list of services, and then in the **Load balancers** blade, click **ResDevWebLB**.
+2. On the  **Dashboard** of the Azure portal, click **More services**, select  **Load Balancers** from the list of services, and then in the **Load balancers** blade, click **ResDevWebLB**.
 
-3. In the  **Setting** blade of the ResDevWebLB Load balancer, click **Backend pools**, and then, in the  **Backend address pools** blade, click **Add**.
+3. In the ResDevWebLB Load balancer blade, click **Backend pools**, and then, in the  **Backend address pools** blade, click **Add**.
 
 4. In the  **Add backend pool** blade, in the **Name** text box, type **ResDevWebLBPool**, and then click  **Add a virtual machine**.
 
@@ -188,7 +186,7 @@
 
 8. In the  **Add backend pool** blade, click **OK**.
 
-9. In the  **Setting** blade for ResDevWebLB, click **Probes**, and then in the  **Probes** blade, click **Add**.
+9. In the ResDevWebLB blade, click **Probes**, and then in the  **Probes** blade, click **Add**.
 
 10. In the  **Add probe** blade, specify the following settings, and then click **OK**:
 
@@ -206,7 +204,7 @@
   - Unhealthy threshold:  **2**
 
 
-1. In the  **Setting** blade for ResDevWebLB, click **Load balancing rules**, and then in the  **Load balancing rules** blade, click **Add**.
+1. In the ResDevWebLB blade, click **Load balancing rules**, and then in the  **Load balancing rules** blade, click **Add**.
 
 2. In the  **Add load balancing rule** blade, complete the following , and then click **OK**:
 
@@ -230,7 +228,7 @@
   - Floating IP:  **Disabled**
 
 
-1. Refresh the Azure portal. In the  **Setting** blade of ResDevWebLB, you should be able to identify its public IP address. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings. You will change these settings later in this lab.
+1. Refresh the Azure portal. In the ResDevWebLB blade, you should be able to identify its public IP address. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings. You will change these settings later in this lab.
 
 
 >  **Result**: After completing this exercise, you should have created an availability set for Azure IaaS v2 virtual machines and configured them up as a load balanced pair.
@@ -316,7 +314,7 @@
 
 3. In the  **ResDevWebAS** blade, in the **Resources** tile, click the **ResDevWebVM2** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade along with its **Settings** blade.
 
-4. In the  **Settings** blade of **ResDevWebVM2** network security group, click **Inbound security rules**.
+4. In the blade of the  **ResDevWebVM2** network security group, click **Inbound security rules**.
 
 5. In the  **Inbound security rules** blade, click **Add**.
 
@@ -389,20 +387,20 @@
 
 2. In the  **Virtual machines** blade, click **ResDevWebVM1**. This automatically opens the  **ResDevWebVM1** blade and its **Settings** blade.
 
-3. In the  **Settings** blade of ResDevWebVM1, click **Disks**.
+3. In the ResDevWebVM1 blade, click **Disks**.
 
 4. In the  **Disks** blade, click **Attach new**.
 
 5. In the  **Attach new disk** blade, specify the following settings, and then click **OK**:
 
 
-  - Name:  **_A_ _ccept the default_**
+  - Name:  **_Accept the default_**
 
   - Type:  **Standard**
 
   - Size:  **1023**
 
-  - Location:  **_N_ _ote that this cannot be changed since the location of the VM determines the location of its disks_**_._
+  - Location:  **_Note that this cannot be changed since the location of the VM determines the location of its disks_**_._
 
   - Host caching:  **None**
 
