--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -51,7 +51,7 @@ The main tasks for this exercise are as follows:
 3. From the Azure portal, create a new availability set with the following settings:
 
 
-  - Name: ** ResDevWebAS**
+  - Name: **ResDevWebAS**
 
   - Fault domains:  **3**
 >  **Note:** You can decrease the value to 2, but not increase it.
@@ -67,7 +67,7 @@ The main tasks for this exercise are as follows:
 1. From the Azure portal, create a new virtual machine with the following settings:
 
 
-  - Name: ** ResDevWebVM1**
+  - Name: **ResDevWebVM1**
 
   - User name:  **Student**
 
@@ -145,9 +145,9 @@ The main tasks for this exercise are as follows:
 
   - Name:  **ResDevWebLB**
 
-  - Scheme:  **Public**
+  - Type:  **Public**
 
-  - Public IP address:  **_Create_ _a_ _new dynamic address named_ ResDevWebLBIP.**
+  - Public IP address:  **_Create new_** dynamic address named **ResDevWebLBIP.**
 
   - Subscription:  **Your subscription.**
 
