--- a/Instructions/20533C_LAB_AK_06.md
+++ b/Instructions/20533C_LAB_AK_06.md
@@ -9,7 +9,7 @@
 
 2. Start Internet Explorer, and then browse to  **https://portal.azure.com**. When prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Microsoft Azure subscription.
 
-3. On the  **Hub** menu, click **New**, and then click  **Data + Storage**.
+3. On the  **Hub** menu, click **New**, and then click  **Storage**.
 
 4. In the Data + Storage blade, click  **Storage account**.
 
@@ -19,6 +19,8 @@
   - Name: Enter a valid, unique name consisting of between 3 and 24 lower case characters or digits.
 
   - Deployment model: Classic
+
+  - Account kind: General purpose
 
   - Performance: Standard
 
@@ -35,7 +37,7 @@
 
 1. At the top of the portal window menu, click the  **Notifications** icon, and then wait for the notification that the storage account has been created.
 
-2. On the  **Hub** menu, click **Browse**, and then click  **Storage accounts (classic)**.
+2. On the  **Hub** menu, click **More services**, and then click  **Storage accounts (classic)**.
 
 3. In the Storage accounts (classic) blade, click the storage account that you just created.
 
@@ -202,9 +204,9 @@ CD D:\Labfiles\Lab06\Starter
 
 5. Browse to  **https://portal.azure.com**, and then sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
 
-6. On the  **Hub** menu, click **Browse**, and then click  **Storage accounts (classic)**.
+6. On the  **Hub** menu, click **More services**, and then click  **Storage accounts (classic)**.
 
-7. In the Storage accounts (classic) blade, click the storage account that you created in the previous exercise, and then in the blade for your storage account, click the  **Keys** icon.
+7. In the Storage accounts (classic) blade, click the storage account that you created in the previous exercise, and then in the blade for your storage account, click  **Access Keys**.
 
 8. On the Manage Keys blade, click the  **Copy** icon next to the primary access key. If prompted to allow access to the Clipboard, click **Allow access**.
 
