--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -58,6 +58,8 @@ The main tasks for this exercise are as follows:
   - Name: Enter a valid, unique name consisting of between 3 and 24 lower case characters or digits.
 
   - Deployment model: Classic
+  
+  - Account kind: General purpose
 
   - Performance: Standard
 
