--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -273,7 +273,7 @@ Connection Timeout=30;
   
 #### Task 1: Delete a database
   
-1. In Internet Explorer, in the Azure Portal, in the Hub menu, click  **Browse**, and then click  **SQL Database**. 
+1. In Internet Explorer, in the Azure Portal, in the Hub menu, click  **More services**, and then click  **SQL Database**. 
 
 2. On the  **SQL Databases** blade, click the **operations** database.
 
