--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -100,7 +100,7 @@ The main tasks for this exercise are as follows:
 1. In the Azure portal, in the  **Automation Account** blade, add a Credential asset:
 
 
-  - Name:  **DefaultAzureCredential**
+  - Name:  **PSCredential**
 
   - Description:  **Lab Automation User (Co-Administrator)**
 
