--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -85,13 +85,13 @@ The main tasks for this exercise are as follows:
 
   - Storage account:  **_Accept the default_**_._
 
-  - Virtual network:  **ResDevWebAS**
+  - Virtual network:  **ResDevWebVNet**
 
   - Subnet:  **_Accept the default_**_._
 
   - Public IP address:  **ResDevWebVM1**
 
-  - Network security group:  **ResDevWebVM1**
+  - Network security group:  **ResDevWebNSG**
 
   - Monitoring:  **Disabled**
 
@@ -119,13 +119,13 @@ The main tasks for this exercise are as follows:
 
   - Storage account:  **_Accept the default_**_._
 
-  - Virtual network:  **ResDevWebAS**
+  - Virtual network:  **ResDevWebVNet**
 
   - Subnet:  **_Accept the default_**_._
 
   - Public IP address:  **ResDevWebVM2**
 
-  - Network security group:  **ResDevWebVM2**
+  - Network security group:  **ResDevWebNSG2**
 
   - Monitoring:  **Disabled**
 
