--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -252,7 +252,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Test the DSC configuration and virtual machine availability
   
-1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebVM1** security group with the following settings:
+1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG** security group with the following settings:
 
 
   - Name:  **allow-http**
@@ -272,7 +272,7 @@ The main tasks for this exercise are as follows:
   - Action:  **Allow**
 
 
-1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebVM2** security group with the following settings:
+1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG2** security group with the following settings:
 
 
   - Name:  **allow-http**
