--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -67,13 +67,13 @@
 
   - Storage account:  **_Accept the default_**_._
 
-  - Virtual network:  **ResDevWebAS**
+  - Virtual network:  **ResDevWebVNet**
 
   - Subnet:  **_Accept the default_**_._
 
   - Public IP address:  **ResDevWebVM1**
 
-  - Network security group:  **ResDevWebVM1**
+  - Network security group:  **ResDevWebNSG**
 
   - Monitoring:  **Disabled**
 
@@ -119,13 +119,13 @@
 
   - Storage account:  **_Accept the default_**_._
 
-  - Virtual network:  **ResDevWebAS**
+  - Virtual network:  **ResDevWebVNet**
 
   - Subnet:  **_Accept the default_**_._
 
   - Public IP address:  **ResDevWebVM2**
 
-  - Network security group:  **ResDevWebVM2**
+  - Network security group:  **ResDevWebNSG2**
 
   - Monitoring:  **Disabled**
 
@@ -280,11 +280,11 @@
   
 1. In the Azure portal within the Internet Explorer window on MIA-CL1, on the Hub menu, click  **Resource groups**.
 
-2. In the  **Resource groups** blade, click **ResDevWebAS**.
+2. In the  **Resource groups** blade, click **ResDevWebRG**.
 
-3. In the  **ResDevWebAS** blade, in the **Resources** tile, click the **ResDevWebVM1** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade along with its **Settings** blade.
+3. In the  **ResDevWebRG** blade, in the **Resources** tile, click the **ResDevWebNSG** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade along with its **Settings** blade.
 
-4. In the  **Settings** blade of the **ResDevWebVM1** network security group, click **Inbound security rules**.
+4. In the  **Settings** blade of the **ResDevWebNSG** network security group, click **Inbound security rules**.
 
 5. In the  **Inbound security rules** blade, click **Add**.
 
@@ -310,11 +310,11 @@
 
 1. Click  **OK**.
 
-2. In the breadcrumb trail at the top of the portal interface, click  **ResDevWebAS** to return to the **ResDevWebAS** blade.
+2. In the breadcrumb trail at the top of the portal interface, click  **ResDevWebRG** to return to the **ResDevWebRG** blade.
 
-3. In the  **ResDevWebAS** blade, in the **Resources** tile, click the **ResDevWebVM2** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade along with its **Settings** blade.
+3. In the  **ResDevWebRG** blade, in the **Resources** tile, click the **ResDevWebNSG2** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade along with its **Settings** blade.
 
-4. In the blade of the  **ResDevWebVM2** network security group, click **Inbound security rules**.
+4. In the blade of the  **ResDevWebNSG2** network security group, click **Inbound security rules**.
 
 5. In the  **Inbound security rules** blade, click **Add**.
 
@@ -340,9 +340,9 @@
 
 1. Click  **OK**.
 
-2. In the breadcrumb trail at the top of the portal interface, click  **ResDevWebAS** to return to the **ResDevWebAS** blade.
+2. In the breadcrumb trail at the top of the portal interface, click  **ResDevWebRG** to return to the **ResDevWebRG** blade.
 
-3. In the  **ResDevWebAS** blade, in the **Resources** tile, click **ResDevWebLB**, representing the load balancer.
+3. In the  **ResDevWebRG** blade, in the **Resources** tile, click **ResDevWebLB**, representing the load balancer.
 
 4. In the  **ResDevWebLB** blade, note the value of its **IP address** entry.
 
