Typo set-azuresubscription
Typo in SetaAzureSubscription command (r missing)

--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -285,7 +285,7 @@ The main tasks for this exercise are as follows:
 
   ```
   Get-AzureSubscription
-Set-AzureSubsciption -SubscriptionName 'Name of your subscription'
+Set-AzureSubscription -SubscriptionName 'Name of your subscription'
   ```
 
 12. Update the network configuration by running the following command at the Windows PowerShell command prompt:
