Format Source port range
Try to format Source port range * in bold

--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -299,7 +299,7 @@
 
   - Protocol:  **TCP**
 
-  - Source port range:  *****
+  - Source port range:  ** \* **
 
   - Destination:  **Any**
 
@@ -329,7 +329,7 @@
 
   - Protocol:  **TCP**
 
-  - Source port range:  *****
+  - Source port range:  ** \* **
 
   - Destination:  **Any**
 
