--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -170,7 +170,7 @@ The main tasks for this exercise are as follows:
 2. At an administrative command prompt, type the following command to map a network drive to the assets file share in Azure storage. Replace both instances of  _storage_account_ with the name of your storage account, and then paste your access key in place of _access_key_.
 
   ```
-  net use z: \\storage_account.file.core.windows.net\assets /u:storage_accountaccess_key
+  net use z: \\storage_account.file.core.windows.net\assets /u:storage_account access_key
   ```
 
 3. In the Command Prompt window, enter the following command to view the contents of the invoices folder in drive Z, which is now mapped to the assets file share that you created in the previous task:
