More button removed
More button to remove a database is removed. Now, you can click on a delete button to remove the database.

--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -281,7 +281,7 @@ Connection Timeout=30;
 
 4. On the  **Restore** blade, verify whether a restore point is available. If not, wait until that is the case.
 
-5. On the  **operations** blade, click **...More** and then click **Delete**.
+5. On the  **operations** blade, click **Delete**.
 
 6. When prompted to confirm, click  **Yes**.
 
