--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -248,7 +248,7 @@
 
 5. In the File Explorer, right click on the  **D:\Labfiles\Lab04\Starter\DeployAzureDSC.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE** window.
 
-6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first publishes the DSC configuration defined in the  **Install.ps1** file to the same storage account hosting the VHD files of the two virtual machines (placing it in the default DSC container named **windows-powershell-dsc**), stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
+6. Review the content of the script - Ensure you enter the location of your subscription at line 6 -: NOTE - the location used here is all one word e.g. "northeurope". Note the variables that it uses, including the storage account and its key. The script first publishes the DSC configuration defined in the  **Install.ps1** file to the same storage account hosting the VHD files of the two virtual machines (placing it in the default DSC container named **windows-powershell-dsc**), stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
 
 7. Start the execution of the script. When prompted, sign in with the username and the password of an account that is either a Service Administrator or a Co-Admin of your Azure subscription. Wait until the script completes.
 
