Typo on Exe1 - Task2 - Step 5 (Load Balancer rule)
Backend Pool: ResDevWebPool -> ResDevWebLBPool
Probe: ResDevWebProbe -> ResDevWebProbe80

--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -187,9 +187,9 @@ The main tasks for this exercise are as follows:
 
   - Port:  **80**
 
-  - Backend Pool:  **ResDevWebPool**
+  - Backend Pool:  **ResDevWebLBPool**
 
-  - Probe:  **ResDevWebProbe**
+  - Probe:  **ResDevWebProbe80**
 
   - Backend port:  **80**
 
