--- a/Instructions/20533C_LAB_08.md
+++ b/Instructions/20533C_LAB_08.md
@@ -97,7 +97,7 @@ In the replacement,  **cloudappprod**_xxx_****is the name of the storage account
 
 9. Locate the value of the  **AdatumAdsDbConnectionString** element of the **AdatumAdsWorkerRole** role in the **ServiceConfiguration.Cloud.cscfg** file.
 
-10. Replace the file of the  **AdatumAdsDbConnectionString** element with the ADO.NET connection string copied to the Clipboard.
+10. Replace the value of the  **AdatumAdsDbConnectionString** element with the ADO.NET connection string copied to the Clipboard.
 
 11. In the connection string you just pasted, locate the text  **{your_password_here}**.
 
