--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -348,9 +348,9 @@ Set-AzureSubscription -SubscriptionName 'Name of your subscription'
 
 7. In the  **ADATUM-BRANCH-VNET** dialog box, click **Yes**.
 
-8. In the  **Search the web and Windows** textbox, type ** ncpa.cpl** and press Enter.
+8. Click **Start** and then click  **Settings**.
 
-9. In the Network Connections window, right-click  **ADATUM-BRANCH-VNET**, and then click  **Connect/Disconnect**. This will launch the Settings app with the VPN tab of  **NETWORK &amp; INTERNET** page.
+9. In the Settings app, click **Network & Internet**. On the **NETWORK & INTERNET** page, click **VPN**.
 
 10. Click  **ADATUM-BRANCH-VNET**, and then click  **Connect**. This will open the  **ADATUM-BRANCH-VNET** dialog box.
 
