--- a/Instructions/20533C_LAB_07.md
+++ b/Instructions/20533C_LAB_07.md
@@ -23,11 +23,11 @@ To achieve this goal, you plan to use Microsoft Azure SQL Database. You have bee
   
  Estimated Time: 60 minutes
 
-Virtual Machine: ** 20533C-MIA-CL1**
+Virtual Machine: **20533C-MIA-CL1**
 
- User Name: ** Student**
+ User Name: **Student**
 
- Password: ** Pa$$w0rd**
+ Password: **Pa$$w0rd**
 
  Before starting this lab, ensure that you have performed the "Preparing the Environment" demonstration tasks at the beginning of the first lesson in this module, and that the setup script has completed.
 
@@ -61,7 +61,7 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 3. From the Azure portal, create a new SQL database with the following parameters: 
 
 
-  - Name **: operations**
+  - Name: **operations**
 
   - SQL server
 
