--- a/Instructions/20533C_LAB_05.md
+++ b/Instructions/20533C_LAB_05.md
@@ -93,7 +93,7 @@ Configuration Source:  _choose the web app you created in Task 1_
 - Use the Settings blade to set the following deployment credentials for the web app that you created in the first task:
 
 
-  - FTP/Deployment User Name:  **ftpadmin _XXXX_** (replace _XXXX_ is a unique number)
+  - FTP/Deployment User Name:  **ftpadmin _XXXX_** (replace _XXXX_ with unique number)
 
   - Password:  **Pa$$w0rd**
 
