--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -151,7 +151,7 @@ What storage-related differences did you notice when you created a virtual machi
 
   **User name**: **Student**
 
-  **Password**: **Pa$$w0rd1234**
+  **Password**: **Pa$$w0rd**
 
  The virtual machine should be running from the previous lab.
 
